footer and spacing fix

--- a/css/article.css
+++ b/css/article.css
@@ -1,11 +1,10 @@
-body {
-    line-height: 1.6;
-    padding: 50px;
-}
-
 .article {
     max-width: 800px;
+    display: flex;
+    flex-direction: column;
     margin: 0 auto;
+    line-height: 1.6;
+    margin-bottom: 50px;
     padding: 20px;
     /* border: 1px solid #ddd; */
 }
